Fixed post pin modal url field spacing.

--- a/public/less/modal.less
+++ b/public/less/modal.less
@@ -123,6 +123,12 @@
   color: white;
 }
 
+/* Post Pin Modals */
+.urlInput{
+  width: 70%;
+  margin: 10px 0 0 10px;
+}
+
 /* File Upload Modal */
 #fileUploadModal{
     width: 700px;
@@ -167,11 +173,7 @@
 #youtubeModal{
   width: 700px;
 }
-.urlInput{
-  width: 70%;
-  margin-left: 10px;
-  margin-bottom: 0;
-}
+
 .uploadMeta .custom_group{
   width:70%;
   float: left;
